2004-05-17  Per Bothner  <per@bothner.com>

	* srfi1.scm (lset-xor!):  Fix argument order bug.

2003-05-09  Chris Dean  <Chris.Dean@sokitomi.com>

	* srfi1.scm (lset-xor):  Fix argument order bug.
	Patch from Savannah bug #8852.

2004-05-03  Per Bothner  <per@bothner.com>

	* srfi1.scm ((list-copy (lis :: <list>))):  Re-written to be iterative
	rather than recursive - which can lead to stack overflow.

2004-03-13  Per Bothner  <per@bothner.com>

	* gui.scm (scroll):  New function.

2004-02-13  Per Bothner  <per@bothner.com>

	* gui.scm (fill, draw, with-paint, with-composite, composite-src-over,
	composite-src, read-image, rotation, with-transform, color-red):
	New functions and constants.
	(panel):  Removed function - use SwingPaintable class instead.

2003-10-19  Per Bothner  <per@bothner.com>

	* srfi1.scm (map-in-order):  Define as an alias for map.

2003-09-04  Per Bothner  <per@bothner.com>

	* HTTP.scm (response-status, error-response):  HTTP requires a space
	after the response code, even if the message is empty,

2003-07-21  Per Bothner  <per@bothner.com>

	* gui.scm:  Rewrite to make use of gnu.kawa.models and
	gnu.kawa.swingviews.

2003-05-31  Chris Dean  <ctdean@mercedsystems.com>

	* srfi1.scm (iota):   Fix default for optional step parameter.

2003-05-07  Per Bothner  <per@bothner.com>

	* HTTP.scm (request-parameter):  Add optional default parameter.

2003-03-21  Chris Dean  <Chris.Dean@sokitomi.com>

	* srfi1.scm (list-tabulate):  Fix thinko.

2003-01-29  Per Bothner  <per@bothner.com>

	* gui.scm: New file.

2003-01-24  Per Bothner  <per@bothner.com>

	* cut.scm:  New file.  Imported implementation of SRFI-26, written
	by Al Petrofsky and Sebastian Egner.
	Added moduile-export.
	* Makefile.am (java_SCM):  Added cut.scm.

2002-11-12  Per Bothner  <per@bothner.com>

	* srfi1.scm: Fix typo - comment start was written with colons.

2002-09-28  Per Bothner  <per@bothner.com>

	* HTTP.scm (request-parameter, (request-parameters):  New.